// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextContainer Matches snapshot - French 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-bczRLJ zVsQE"
      >
        <p>
          Bienvenue sur Mars ! Vous pouvez enfin réserver les vacances de vos rêves avec nos forfaits ultra luxueux, conçus rien que pour vous ! Laissez-vous oublier les problèmes du réchauffement climatique, du capitalisme, du choc des classes et tous les autres problèmes, en vous retirant tout simplement de la Terre. Cliquez sur la page suivante pour choisir une date, puis choisissez la bonne façon de vous gâter pendant que vous êtes sur la planète rouge et envoyez-nous enfin tout l'argent, dont vous n'avez absolument pas besoin. Vous méritez de vous faire plaisir !
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bczRLJ zVsQE"
    >
      <p>
        Bienvenue sur Mars ! Vous pouvez enfin réserver les vacances de vos rêves avec nos forfaits ultra luxueux, conçus rien que pour vous ! Laissez-vous oublier les problèmes du réchauffement climatique, du capitalisme, du choc des classes et tous les autres problèmes, en vous retirant tout simplement de la Terre. Cliquez sur la page suivante pour choisir une date, puis choisissez la bonne façon de vous gâter pendant que vous êtes sur la planète rouge et envoyez-nous enfin tout l'argent, dont vous n'avez absolument pas besoin. Vous méritez de vous faire plaisir !
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TextContainer Matches snapshot - Polish 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-bczRLJ zVsQE"
      >
        <p>
          Witamy na Marsie! Już teraz możesz wybrać dla siebie wakacje swojego życia, zaprojektowanie tylko dla Ciebie! Pozwól sobie zapomnieć o globalnym ociepleniu, kapitalizmie, walce klas i wszystkich tych ziemskich problemach, poprzez jakże proste opuszczenie Ziemi. Kliknij na następną stronę, wybierz odpowiednią dla siebie datę, a następnie wybierz sposób w jaki planujesz się rozpieścić na Czerwonej Planecie. Następnie wyślij nam wszystkie te pieniądze, których z pewnością nie potrzebujesz. Zasługujesz na to by się rozpieścić!
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bczRLJ zVsQE"
    >
      <p>
        Witamy na Marsie! Już teraz możesz wybrać dla siebie wakacje swojego życia, zaprojektowanie tylko dla Ciebie! Pozwól sobie zapomnieć o globalnym ociepleniu, kapitalizmie, walce klas i wszystkich tych ziemskich problemach, poprzez jakże proste opuszczenie Ziemi. Kliknij na następną stronę, wybierz odpowiednią dla siebie datę, a następnie wybierz sposób w jaki planujesz się rozpieścić na Czerwonej Planecie. Następnie wyślij nam wszystkie te pieniądze, których z pewnością nie potrzebujesz. Zasługujesz na to by się rozpieścić!
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TextContainer Matches snapshot - default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-bczRLJ zVsQE"
      >
        <p>
          Welcome to Mars! Now you can finally book the holidays of your dream with our ultra luxurious packages, designed just for you! Let yourself forgot about the problems of global warming, capitalism, clash of classes and all the other problems, by simply removing yourself from the Earth. Click onto next page, to pick a date, then chose right form of spoiling yourself while on the Red Planet and finally send us all the money, which you totally don't need. You deserve to treat yourself!
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bczRLJ zVsQE"
    >
      <p>
        Welcome to Mars! Now you can finally book the holidays of your dream with our ultra luxurious packages, designed just for you! Let yourself forgot about the problems of global warming, capitalism, clash of classes and all the other problems, by simply removing yourself from the Earth. Click onto next page, to pick a date, then chose right form of spoiling yourself while on the Red Planet and finally send us all the money, which you totally don't need. You deserve to treat yourself!
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
